@startuml

hide members
class Equity 
class Photo 
class Agent 
class Customer 
class Request 
class TimeSlot
class Comment

Equity <-- Photo: of
Equity --> Customer : ownedBy
Equity --> Agent : responsible

Meeting --> Agent : scheduledBy
Meeting --> Customer : attends
Meeting --> Equity : at
Meeting -> Request : from

Request --> Equity : about
Request --> Customer : issuedBy
Request --> Agent : assignedTo
Request <- TimeSlot : forRequest

Comment -> Customer: createdBy
Comment -> Equity : about

@enduml